[gd_scene load_steps=7 format=2]

[ext_resource path="res://game_assets/FifteenNarrow.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 87
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[node name="Menu" type="CanvasLayer"]
scale = Vector2( 1.24, 1.18 )
transform = Transform2D( 1.24, 0, 0, 1.18, 0, 0 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -14.1581
margin_top = -8.49487
margin_right = 1033.84
margin_bottom = 607.505
color = Color( 0.960784, 0.960784, 0.862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 188.775
margin_top = 50.9692
margin_right = 782.775
margin_bottom = 170.969
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Industrial Complex"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionsButton" type="Button" parent="."]
margin_left = 193.548
margin_top = 230.508
margin_right = 415.548
margin_bottom = 291.508
custom_fonts/font = SubResource( 2 )
text = "How to Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
margin_left = 610.0
margin_top = 230.5
margin_right = 832.0
margin_bottom = 291.5
custom_fonts/font = SubResource( 3 )
text = "Play!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutButton" type="Button" parent="."]
margin_left = 193.548
margin_top = 386.441
margin_right = 415.548
margin_bottom = 447.441
custom_fonts/font = SubResource( 4 )
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderButton" type="Button" parent="."]
margin_left = 610.0
margin_top = 386.44
margin_right = 832.0
margin_bottom = 447.44
custom_fonts/font = SubResource( 4 )
text = "Leaderboard"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="InstructionsButton" to="." method="_on_InstructionsButton_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="pressed" from="LeaderButton" to="." method="_on_LeaderButton_pressed"]
